--- a/new.ipynb
+++ b/new.ipynb
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rock, just rock. His name Rocky\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal:\n",
     "    def __init__(self,color,tip,food,name):\n",
@@ -57,6 +65,8 @@
     "class Rock(Animal):\n",
     "    def breathe(self):\n",
     "        print(f\"{self.name} вообще не дышит! Вызывайте скорую!\")\n",
+    "    def __str__(self):\n",
+    "        return f\"Rock, just rock. His name {self.name}\"\n",
     "\n",
     "a = Animal(\"grey\",\"stone\",\"none\",\"Rocky\")\n",
     "b = Cat(\"white\",\"siamskaya\",\"meat\",\"Marusya\",4)\n",
@@ -67,19 +77,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TANCHIKI\n",
+      "TANCHIKI\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
     "class Tank:\n",
+    "    m = \"TANCHIKI\"\n",
     "    def __init__(self, model, armor, min_damage, max_damage, health):\n",
     "        self.model = model\n",
     "        self.armor = armor\n",
     "        self.damage = random.randint(min_damage, max_damage)\n",
     "        self.health = health\n",
-    "    "
+    "    def __str__(self):\n",
+    "        return f\"{self.model} имеет лобовую броню {self.armor}мм при {self.health}ед. здоровья и урон в {self.damage} единиц\"\n",
+    "    def health_down(self,enemy_damage):\n",
+    "        self.health -= enemy_damage\n",
+    "        print(f\"\\n{self.model}:\")\n",
+    "        print(f\"Командир, по экипажу {self.model} попали, у нас осталось {self.health} очков здоровья\")\n",
+    "    def shot(self,enemy):\n",
+    "        if enemy==self: return 0\n",
+    "        if enemy.health <= 0 or self.damage >= enemy.health:\n",
+    "            enemy.health = 0\n",
+    "            print(f\"Экипаж танка {enemy.model} уничтожен\")\n",
+    "        else:\n",
+    "            enemy.health_down(self.damage)\n",
+    "            print(f\"\\n{self.model}:\")\n",
+    "            print(f\"Точно в цель, у противника {enemy.model} осталось {enemy.health} единиц здоровья\")\n",
+    "class MegaTank(Tank):\n",
+    "    def __init__(self, model, armor, min_damage, max_damage, health):\n",
+    "        super().__init__(model, armor, min_damage, max_damage, health)\n",
+    "        self.forceArmor = True\n",
+    "    def health_down(self, enemy_damage):\n",
+    "        super().health_down(enemy_damage/2)            \n",
+    "t = Tank(\"T-34\",100,100,1000,2000)\n",
+    "t2 = Tank(\"E100\",50,100,1500,1500)\n",
+    "print(t.m)\n",
+    "print(t2.m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Сергей Вишленков вот: \"@Udontl\""
    ]
   }
  ],
