--- a/new.ipynb
+++ b/new.ipynb
@@ -132,8 +132,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Сергей Вишленков вот: \"@Udontl\""
+    "class User:\n",
+    "    def __init__(self, health):\n",
+    "        self.health = health\n",
+    "    def __str__(self):\n",
+    "        return f\"У персонажа {self.health} здоровья\"\n",
+    "    def health_down(self,enemy_damage):\n",
+    "        self.health -= enemy_damage\n",
+    "        print(f\"\\n{self.model}:\")\n",
+    "        print(f\"Командир, по экипажу {self.model} попали, у нас осталось {self.health} очков здоровья\")\n",
+    "    def shot(self,enemy):\n",
+    "        if enemy.health <= 0 or self.damage >= enemy.health:\n",
+    "            enemy.health = 0\n",
+    "            print(f\"Убит\")\n",
+    "        else:\n",
+    "            enemy.health_down(self.damage)\n",
+    "            print(f\"\\n{self.model}:\")\n",
+    "            print(f\"Точно в цель, у противника {enemy.health} единиц здоровья\")\n",
+    "class Mage(User):\n",
+    "    def __init__(self,health,mana):\n",
+    "        super().__init__(health)\n",
+    "        self.mana=mana\n",
+    "    def shot(self,enemy):\n",
+    "        if self.mana>0:\n",
+    "            if enemy.health <= 0 or self.damage >= enemy.health:\n",
+    "                enemy.health = 0\n",
+    "                print(f\"Убит\")\n",
+    "            else:\n",
+    "                enemy.health_down(self.damage)\n",
+    "                print(f\"\\n{self.model}:\")\n",
+    "                print(f\"Точно в цель, у противника {enemy.health} единиц здоровья\")\n",
+    "            self.mana-=1\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
