--- a/new.ipynb
+++ b/new.ipynb
@@ -171,7 +171,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Сергей Вишленков вот: \"@Udontl\""
+   ]
   }
  ],
  "metadata": {
