--- a/new.ipynb
+++ b/new.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=0\n",
-    "c=True\n",
-    "a = 'HELLO' if b>1 or c == True else 'WORLD'\n",
-    "print(a)"
+    "print(1+2+3)"
    ]
   },
   {
@@ -18,112 +15,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Vect:\n",
-    "    def __init__(self,x,y,z=0):\n",
-    "        self.x=x\n",
-    "        self.y=y\n",
-    "        self.z=z\n",
-    "    def length(self):\n",
-    "        return (self.x*self.x+self.y*self.y+self.z*self.z)**0.5\n",
-    "\n",
-    "a = Vect(4,5)\n",
-    "b = Vect(1,1)\n",
-    "c = Vect(1,2,3)\n",
-    "print(a.x,a.y)\n",
-    "print(c.length())"
+    "print(\"one\"+\"two\"+\"three\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rock, just rock. His name Rocky\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Animal:\n",
-    "    def __init__(self,color,tip,food,name):\n",
-    "        self.color = color\n",
-    "        self.tip = tip\n",
-    "        self.food = food \n",
+    "print(len(\"Programming\"))\n",
+    "print(len([\"Programming\",\"is\",\"cool\"]))\n",
+    "print(len({1:\"Programming\",2:\"is\",3:\"cool\",7:\"!\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self,name,age):\n",
     "        self.name = name\n",
-    "    def breathe(self):\n",
-    "        print(f\"{self.name} усиленно дышит\")\n",
+    "        self.age = age\n",
+    "    def info(self):\n",
+    "        print(f\"I am a cat. My name is {self.name}. I am {self.age} years old.\")\n",
+    "    def make_sound(self):\n",
+    "        print(\"Meow\")\n",
     "\n",
-    "class Cat(Animal):\n",
-    "    def __init__(self,color,tip,food,name,weight):\n",
-    "        super().__init__(color,tip,food,name)\n",
-    "        self.weight = weight\n",
-    "    def meow(self,a = 45):\n",
-    "        print(\"Meow \"*a)\n",
-    "class Rock(Animal):\n",
-    "    def breathe(self):\n",
-    "        print(f\"{self.name} вообще не дышит! Вызывайте скорую!\")\n",
-    "    def __str__(self):\n",
-    "        return f\"Rock, just rock. His name {self.name}\"\n",
-    "\n",
-    "a = Animal(\"grey\",\"stone\",\"none\",\"Rocky\")\n",
-    "b = Cat(\"white\",\"siamskaya\",\"meat\",\"Marusya\",4)\n",
-    "d = Rock(\"grey\",\"stone\",\"none\",\"Rocky\")\n",
-    "\n",
-    "print(d)"
+    "class Dog(Cat):\n",
+    "    def info(self):\n",
+    "        print(f\"I am a dog. My name is {self.name}. I am {self.age} years old.\")\n",
+    "    def make_sound(self):\n",
+    "        print(\"Gav\")\n",
+    "cat1 = Cat(\"Marusia\",2.5)\n",
+    "dog1 = Dog(\"Rex\",3)\n",
+    "for animal in (cat1,dog1):\n",
+    "    animal.make_sound()\n",
+    "    animal.info()\n",
+    "    animal.make_sound()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    def public(self):\n",
+    "        return 42\n",
+    "    def _private(self):\n",
+    "        return \"hello world\"\n",
+    "    def __protected(self,n):\n",
+    "        return n if n<2 else self.__protected(n-1)+self.__protected(n-2)\n",
+    "    def wrapped_protect(self,n):\n",
+    "        return self.__protected(n)\n",
+    "a = A()\n",
+    "a.public()\n",
+    "a._private()\n",
+    "a.wrapped_protect(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TANCHIKI\n",
-      "TANCHIKI\n"
+      "43466557686937456435688527675040625802564660517371780402481729089536555417949051890403879840079255169295922593080322634775209689623239873322471161642996440906533187938298969649928516003704476137795166849228875\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "def memorize(f):\n",
+    "    cache = dict()\n",
+    "    def wrapper(x):\n",
+    "        if x not in cache:\n",
+    "            cache[x]=f(x)\n",
+    "        return cache[x]\n",
+    "    return wrapper\n",
+    "@memorize\n",
+    "def fib(n):\n",
+    "    return n if n<2 else fib(n-1)+fib(n-2)\n",
+    "print(fib(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Singleton object at 0x119b511d0> 4726264272\n",
+      "<__main__.Singleton object at 0x119b511d0> 4726264272\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Singleton(object):\n",
+    "    def __new__(self):\n",
+    "        if not hasattr(self, \"instance\"):\n",
+    "            self.instance = super(Singleton, self).__new__(self)\n",
+    "        return self.instance\n",
+    "s = Singleton()\n",
+    "print(s,id(s))\n",
+    "s1 = Singleton()\n",
+    "print(s,id(s1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "class Tank:\n",
-    "    m = \"TANCHIKI\"\n",
-    "    def __init__(self, model, armor, min_damage, max_damage, health):\n",
-    "        self.model = model\n",
-    "        self.armor = armor\n",
-    "        self.damage = random.randint(min_damage, max_damage)\n",
-    "        self.health = health\n",
-    "    def __str__(self):\n",
-    "        return f\"{self.model} имеет лобовую броню {self.armor}мм при {self.health}ед. здоровья и урон в {self.damage} единиц\"\n",
-    "    def health_down(self,enemy_damage):\n",
-    "        self.health -= enemy_damage\n",
-    "        print(f\"\\n{self.model}:\")\n",
-    "        print(f\"Командир, по экипажу {self.model} попали, у нас осталось {self.health} очков здоровья\")\n",
-    "    def shot(self,enemy):\n",
-    "        if enemy==self: return 0\n",
-    "        if enemy.health <= 0 or self.damage >= enemy.health:\n",
-    "            enemy.health = 0\n",
-    "            print(f\"Экипаж танка {enemy.model} уничтожен\")\n",
-    "        else:\n",
-    "            enemy.health_down(self.damage)\n",
-    "            print(f\"\\n{self.model}:\")\n",
-    "            print(f\"Точно в цель, у противника {enemy.model} осталось {enemy.health} единиц здоровья\")\n",
-    "class MegaTank(Tank):\n",
-    "    def __init__(self, model, armor, min_damage, max_damage, health):\n",
-    "        super().__init__(model, armor, min_damage, max_damage, health)\n",
-    "        self.forceArmor = True\n",
-    "    def health_down(self, enemy_damage):\n",
-    "        super().health_down(enemy_damage/2)            \n",
-    "t = Tank(\"T-34\",100,100,1000,2000)\n",
-    "t2 = Tank(\"E100\",50,100,1500,1500)\n",
-    "print(t.m)\n",
-    "print(t2.m)\n"
+    "def repair(func):\n",
+    "    def wrapper(a,b):\n",
+    "        return func(a,b)+1\n",
+    "    return wrapper\n",
+    "@repair\n",
+    "def wrong(a,b):\n",
+    "    return a+b-1\n",
+    "\n",
+    "print(wrong(5,16))"
    ]
   },
   {
@@ -132,47 +155,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class User:\n",
-    "    def __init__(self, health):\n",
-    "        self.health = health\n",
-    "    def __str__(self):\n",
-    "        return f\"У персонажа {self.health} здоровья\"\n",
-    "    def health_down(self,enemy_damage):\n",
-    "        self.health -= enemy_damage\n",
-    "        print(f\"\\n{self.model}:\")\n",
-    "        print(f\"Командир, по экипажу {self.model} попали, у нас осталось {self.health} очков здоровья\")\n",
-    "    def shot(self,enemy):\n",
-    "        if enemy.health <= 0 or self.damage >= enemy.health:\n",
-    "            enemy.health = 0\n",
-    "            print(f\"Убит\")\n",
-    "        else:\n",
-    "            enemy.health_down(self.damage)\n",
-    "            print(f\"\\n{self.model}:\")\n",
-    "            print(f\"Точно в цель, у противника {enemy.health} единиц здоровья\")\n",
-    "class Mage(User):\n",
-    "    def __init__(self,health,mana):\n",
-    "        super().__init__(health)\n",
-    "        self.mana=mana\n",
-    "    def shot(self,enemy):\n",
-    "        if self.mana>0:\n",
-    "            if enemy.health <= 0 or self.damage >= enemy.health:\n",
-    "                enemy.health = 0\n",
-    "                print(f\"Убит\")\n",
-    "            else:\n",
-    "                enemy.health_down(self.damage)\n",
-    "                print(f\"\\n{self.model}:\")\n",
-    "                print(f\"Точно в цель, у противника {enemy.health} единиц здоровья\")\n",
-    "            self.mana-=1\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Сергей Вишленков вот: \"@Udontl\""
+    "from datetime import datetime\n",
+    "def timeit(func):\n",
+    "    def wrapper(a):\n",
+    "        s = datetime.now()\n",
+    "        res = func(a)\n",
+    "        print(f\"time:{datetime.now()-s}\")\n",
+    "        return res\n",
+    "    return wrapper\n",
+    "@timeit\n",
+    "def gen1(v):\n",
+    "    l = []\n",
+    "    s = 1\n",
+    "    for i in range(v):\n",
+    "        l.append(s)\n",
+    "        s+=2\n",
+    "        if s>=v: break\n",
+    "    return l\n",
+    "@timeit\n",
+    "def gen2(v):\n",
+    "    l = []\n",
+    "    for i in range(v):\n",
+    "        if i%2!=0:l.append(i)\n",
+    "    return l\n",
+    "@timeit\n",
+    "def gen3(v):\n",
+    "    l = []\n",
+    "    for i in range(1,v,2):l.append(i)\n",
+    "    return l\n",
+    "@timeit\n",
+    "def gen4(v):\n",
+    "    return [i for i in range(1,v,2)]\n",
+    "@timeit\n",
+    "def gen5(v):\n",
+    "    a = 1\n",
+    "    l = []\n",
+    "    while a != v:\n",
+    "        r = a % 2 \n",
+    "        if r == 1:\n",
+    "            l.append(a)\n",
+    "        a += 1  \n",
+    "    return l\n",
+    "test = [gen1,gen2,gen3,gen4,gen5]\n",
+    "v=10000000\n",
+    "for i in test: i(v)\n",
+    "\n"
    ]
   }
  ],
@@ -192,12 +219,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
