--- a/api.ipynb
+++ b/api.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1137496597.py, line 8)",
+     "ename": "AttributeError",
+     "evalue": "module 'telebot' has no attribute 'Telebot'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pattycha/code2035-2/api.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtanks\u001b[39;00m \u001b[39mimport\u001b[39;00m Tank\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m tok \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m5614676987:AAFjB8-KJRp2Gp16lMEk2rasjnnoUWP2qME\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m bot \u001b[39m=\u001b[39m telebot\u001b[39m.\u001b[39;49mTelebot(tok)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m tanks_mass \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m@bot\u001b[39m\u001b[39m.\u001b[39mmessage_handler(commands\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mmake\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/api.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_message\u001b[39m(message):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'telebot' has no attribute 'Telebot'"
      ]
     }
    ],
@@ -19,7 +22,7 @@
     "import threading\n",
     "from tanks import Tank\n",
     "tok = \"5614676987:AAFjB8-KJRp2Gp16lMEk2rasjnnoUWP2qME\"\n",
-    "bot = telebot.telebot(tok)\n",
+    "bot = telebot.Telebot(tok)\n",
     "tanks_mass = []\n",
     "@bot.message_handler(commands=[\"make\"])\n",
     "def make_message(message):\n",
@@ -52,6 +55,13 @@
     "        t1.shot(t2)\n",
     "        bot.send_message(message.chat.id,t1.mes)\n",
     "        bot.send_message(message.chat.id,t2.mes)\n",
+    "        tanks_mass = [i for i in tanks_mass if i.health>0]\n",
+    "    except:\n",
+    "        bot.send_message(message.chat.id,\"Shot is not allright\")\n",
+    "    \n",
+    "\n",
+    "t = threading.Thread(target = bot.infinity_polling)\n",
+    "t.start()\n",
     "        "
    ]
   }
