--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "У Данил зарплата в месяц 200000, True, True\n",
-      "У Никита зарплата в месяц 250000, False, True\n",
-      "У Ваня зарплата в месяц 150000, False, True\n",
-      "У Ольга зарплата в месяц 150000, False, True\n"
+      "У Данил зарплата в месяц 200000,не в отпуске: да,хороший работник да\n",
+      "У Никита зарплата в месяц 250000,не в отпуске: нет,хороший работник да\n",
+      "У Ваня зарплата в месяц 150000,не в отпуске: нет,хороший работник да\n",
+      "У Ольга зарплата в месяц 150000,не в отпуске: нет,хороший работник да\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
     "    def info(self):\n",
     "        print(f\"У {self.name} зарплата в месяц {self.salary}, {self.on_vacation}, {self.is_good_employee}\")\n",
     "    def __str__(self):\n",
-    "        return f\"У {self.name} зарплата в месяц {self.salary}, {self.on_vacation}, {self.is_good_employee}\"\n",
+    "        return f\"У {self.name} зарплата в месяц {self.salary},не в отпуске: {'да' if self.on_vacation else 'нет'},хороший работник {'да' if self.is_good_employee else 'нет'}\"\n",
     "employees = [Employee('Данил', 200_000, True), Employee('Никита', 250_000), Employee('Ваня', 150_000), Employee('Ольга', 150_000), Employee('Олег', 150_000,is_good_employee = False)]\n",
     "employees  = [i for i in employees if i.is_good_employee==True]\n",
     "for i in employees:\n",
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
