--- a/new.ipynb
+++ b/new.ipynb
@@ -20,80 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'count': 1,\n",
-      " 'items': [{'conversation': {'can_write': {'allowed': True},\n",
-      "                             'chat_settings': {'acl': {'can_call': False,\n",
-      "                                                       'can_change_info': True,\n",
-      "                                                       'can_change_invite_link': True,\n",
-      "                                                       'can_change_pin': True,\n",
-      "                                                       'can_change_style': True,\n",
-      "                                                       'can_copy_chat': False,\n",
-      "                                                       'can_invite': True,\n",
-      "                                                       'can_moderate': True,\n",
-      "                                                       'can_promote_users': True,\n",
-      "                                                       'can_see_invite_link': True,\n",
-      "                                                       'can_use_mass_mentions': True},\n",
-      "                                               'active_ids': [4803531,\n",
-      "                                                              -219674276],\n",
-      "                                               'admin_ids': [4803531],\n",
-      "                                               'is_group_channel': False,\n",
-      "                                               'is_service': False,\n",
-      "                                               'members_count': 2,\n",
-      "                                               'owner_id': -219674276,\n",
-      "                                               'permissions': {'call': 'owner_and_admins',\n",
-      "                                                               'change_admins': 'owner',\n",
-      "                                                               'change_info': 'owner_and_admins',\n",
-      "                                                               'change_pin': 'owner_and_admins',\n",
-      "                                                               'change_style': 'all',\n",
-      "                                                               'invite': 'all',\n",
-      "                                                               'see_invite_link': 'all',\n",
-      "                                                               'use_mass_mentions': 'owner_and_admins'},\n",
-      "                                               'photo': {'is_default_call_photo': False,\n",
-      "                                                         'is_default_photo': False,\n",
-      "                                                         'photo_100': 'https://vk.com/images/community_100.png?ava=1',\n",
-      "                                                         'photo_200': 'https://vk.com/images/community_200.png?ava=1',\n",
-      "                                                         'photo_50': 'https://vk.com/images/community_50.png?ava=1'},\n",
-      "                                               'state': 'in',\n",
-      "                                               'title': 'БОТ ВК'},\n",
-      "                             'important': False,\n",
-      "                             'in_read': 1,\n",
-      "                             'in_read_cmid': 1,\n",
-      "                             'is_marked_unread': False,\n",
-      "                             'last_conversation_message_id': 2,\n",
-      "                             'last_message_id': 2,\n",
-      "                             'out_read': 2,\n",
-      "                             'out_read_cmid': 2,\n",
-      "                             'peer': {'id': 2000000001,\n",
-      "                                      'local_id': 1,\n",
-      "                                      'type': 'chat'},\n",
-      "                             'unanswered': True,\n",
-      "                             'unread_count': 1},\n",
-      "            'last_message': {'attachments': [],\n",
-      "                             'conversation_message_id': 2,\n",
-      "                             'date': 1680186461,\n",
-      "                             'from_id': 4803531,\n",
-      "                             'fwd_messages': [],\n",
-      "                             'id': 2,\n",
-      "                             'important': False,\n",
-      "                             'is_hidden': False,\n",
-      "                             'out': 0,\n",
-      "                             'peer_id': 2000000001,\n",
-      "                             'random_id': 0,\n",
-      "                             'text': 'Ку'}}],\n",
-      " 'unread_count': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
-    "from pprint import pprint\n",
     "from bs4 import BeautifulSoup\n",
     "from datetime import datetime\n",
     "import vk_api\n",
@@ -103,8 +34,54 @@
     "\n",
     "vk = vk_api.VkApi(token = token)\n",
     "\n",
-    "messages = vk.method(\"messages.getConversations\",{\"count\":20,\"filter\":\"unanswered\"})\n",
-    "pprint(messages)\n"
+    "url = \"http://www.cbr.ru/scripts/XML_daily.asp?\"\n",
+    "today = datetime.today()\n",
+    "today = today.strftime(\"%d/%m/%Y\")\n",
+    "payload = {\"date_req\": today}\n",
+    "response = requests.get(url, params=payload)\n",
+    "xml = BeautifulSoup(response.content, 'lxml')\n",
+    "\n",
+    "def get_course(currency):\n",
+    "    return str(xml.find(\"valute\", {'id': currency}).value.text)\n",
+    "\n",
+    "\n",
+    "messages = vk.method(\"messages.getConversations\", {\"count\": 20, \"filter\": \"unanswered\"})\n",
+    "while True:\n",
+    "    messages = vk.method(\"messages.getConversations\",{\"count\":20,\"filter\":\"unanswered\"})\n",
+    "    if messages['count']>0:\n",
+    "        user_id = messages['items'][0]['last_message']['from_id']\n",
+    "        message_id = messages['items'][0]['last_message']['id']\n",
+    "        message_text = messages['items'][0]['last_message']['text']\n",
+    "        if message_text.lower() == \"курс\":\n",
+    "            vk.method(\"messages.send\", {\"peer_id\": user_id, \"random_id\": message_id, \"message\": get_course(\"R01235\")})\n",
+    "        else:\n",
+    "            vk.method(\"messages.send\", {\"peer_id\": user_id, \"random_id\": message_id, \"message\":  \"неизвестная команда\"})\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting lxml\n",
+      "  Using cached lxml-4.9.2.tar.gz (3.7 MB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hInstalling collected packages: lxml\n",
+      "\u001b[33m  DEPRECATION: lxml is being installed using the legacy 'setup.py install' method, because it does not have a 'pyproject.toml' and the 'wheel' package is not installed. pip 23.1 will enforce this behaviour change. A possible replacement is to enable the '--use-pep517' option. Discussion can be found at https://github.com/pypa/pip/issues/8559\u001b[0m\u001b[33m\n",
+      "\u001b[0m  Running setup.py install for lxml ... \u001b[?25ldone\n",
+      "\u001b[?25hSuccessfully installed lxml-4.9.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install lxml"
    ]
   },
   {
